--- a/css/we.css
+++ b/css/we.css
@@ -1,56 +1,45 @@
-main{
-    display: flex;
-    width: 100%;
-    height: 700px;
-    background: linear-gradient(to bottom, black, white);
+main {
+  display: flex;
+  width: 100%;
+  height: 700px;
+  background: linear-gradient(to bottom, black, white);
 }
 
-main #contain{
-    position: relative;
-    width: 100%;
-    height: 100%;
+main #contain .text-desing {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  width: 400px;
+  height: 200px;
+  border-radius: 10px;
+  border: 1px solid black;
+  padding: 10px;
 }
 
-main #contain #text1{
-position: absolute;
-width: 400px;
-height: 200px;
-border: 1px solid  black;
-top: 150px;
-left: 80px;
-border-radius: 10px;
-padding: 10px;
+main #contain {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
-main #contain #text2{
-position: absolute;
-width: 400px;
-height: 200px;
-top: 450px;
-left: 500px;
-border-radius: 10px;
-border: 1px solid  black;
-padding: 10px;
+main #contain #position-1 {
+  top: 150px;
+  left: 80px;
 }
 
-main #contain #text3{
-position: absolute;
-width: 400px;
-height: 200px;
-top: 150px;
-left: 950px;
-border-radius: 10px;
-border: 1px solid  black;
-padding: 10px;
+main #contain #position-2 {
+  top: 450px;
+  left: 500px;
 }
 
-main #contain #text4{
-position: absolute;
-width: 400px;
-height: 200px;
-top: 450px;
-left: 1400px;
-border-radius: 10px;
-border: 1px solid black;
-padding: 10px;
+main #contain #position-3 {
+  top: 150px;
+  left: 950px;
+}
+
+main #contain #position-4 {
+  top: 450px;
+  left: 1400px;
 }
