--- a/css/nav.css
+++ b/css/nav.css
@@ -1,21 +1,45 @@
-nav{
-    display: flex;
-    width: 100%;
-    height: 50px;
-    background-color: rgb(44, 44, 44);
-    color: white;
+nav {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(44, 44, 44);
+  color: white;
 }
 
-nav #contain1{
-    display: flex;
-    width: 50%;
-    align-items: center;
-    padding-left: 40px;
+nav #contain-1 {
+  display: flex;
+  width: 25%;
+  height: 100%;
+  padding-left: 40px;
+  justify-content: start;
+  align-items: center;
 }
 
-nav #contain2{
-    display: flex;
-    width: 50%;
-    justify-content: space-around;
-    align-items: center;
+nav #contain-2 {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  justify-content: space-around;
+}
+
+nav #contain-2 .botones {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
+nav #contain-2 .botones a {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+}
+
+nav #contain-2 .botones a:hover {
+  background-color: rgb(182, 182, 182);
+  color: black;
+  transition: 1s;
 }
