--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,31 @@
-header{
+/* header {
+  display: flex;
+  width: 100%;
+  height: 974px;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
+}
+
+header .contain {
+  display: flex;
+  width: 20%;
+  height: 70%;
+  border: solid 1px white;
+  margin: 0px 80px;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+header .contain video {
+  width: 100%;
+  height: auto;
+} */
+
+
+header {
     display: flex;
     width: 100%;
     height: 974px;
@@ -7,7 +34,7 @@ header{
     align-items: center;
 }
 
-header #contain{
+header .contain {
     display: flex;
     width: 20%;
     height: 70%;
@@ -16,4 +43,16 @@ header #contain{
     color: white;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    position: relative;
+}
+
+header .contain video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
 }
