--- a/css/home.css
+++ b/css/home.css
@@ -56,3 +56,7 @@ header .contain video {
     object-fit: cover;
     transform: translate(-50%, -50%);
 }
+
+header .contain img {
+    max-width: 250%;
+}
