--- a/css/home.css
+++ b/css/home.css
@@ -24,39 +24,71 @@ header .contain video {
   height: auto;
 } */
 
-
 header {
-    display: flex;
-    width: 100%;
-    height: 974px;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  width: 100%;
+  height: 974px;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
 }
 
 header .contain {
-    display: flex;
-    width: 20%;
-    height: 70%;
-    border: solid 1px white;
-    margin: 0px 80px;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
+  display: flex;
+  width: 20%;
+  height: 70%;
+  border: solid 1px white;
+  margin: 0px 80px;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+}
+
+header .contain-img {
+  display: flex;
+  width: 20%;
+  height: 30%;
+  margin: 0px 80px;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+}
+
+header .contain-img img {
+  width: 80%;
+  height: 80%;
+  object-fit: cover;
+  position: absolute;
+  top: 50px;
+  left: 0;
 }
 
 header .contain video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
 }
 
-header .contain img {
-    max-width: 250%;
+header #recorte-1 {
+  clip-path: polygon(0% 0%, 100% 15%, 100% 100%, 0% 100%, 0% 25%);
+}
+
+header #recorte-2 {
+  clip-path: polygon(0% 20%, 100% 35%, 100% 100%, 0% 100%, 0% 25%);
+}
+
+header #recorte-3 {
+  clip-path: polygon(100% 20%, 100% 0%, 100% 100%, 0% 100%, 0% 35%);
+}
+
+header #recorte-4 {
+  clip-path: polygon(100% 0%, 100% 0%, 100% 100%, 0% 100%, 0% 15%);
 }
