--- a/css/services.css
+++ b/css/services.css
@@ -3,43 +3,34 @@ article {
   width: 100%;
   height: 700px;
   background-color: rgb(216, 216, 216);
+  flex-direction: column;
 }
 
-article #contain .text-desing {
+article .contain {
   display: flex;
+  width: 100%;
+  height: 35%;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  position: absolute;
-  width: 400px;
-  height: 200px;
-  border-radius: 10px;
-  border: 1px solid black;
-  padding: 10px;
 }
 
-article #contain {
-  position: relative;
+article .contain .box-desing{
+  display: flex;
   width: 100%;
   height: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 50px;
+  text-align: center;
 }
 
-article #contain #position-1 {
-  top: 150px;
-  left: 80px;
+article .contain #box-desing-7{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 520px;
+  text-align: center;
 }
 
-article #contain #position-2 {
-  top: 450px;
-  left: 500px;
-}
-
-article #contain #position-3 {
-  top: 150px;
-  left: 950px;
-}
-
-article #contain #position-4 {
-  top: 450px;
-  left: 1400px;
-}
