--- a/css/footer.css
+++ b/css/footer.css
@@ -1,28 +1,15 @@
-footer{
-    display: flex;
-    width: 100%;
-    height: 400px;
-    background-color: rgb(29, 29, 29);
-    flex-direction: column;
+footer {
+  display: flex;
+  width: 100%;
+  height: 200px;
+  background-color: rgb(29, 29, 29);
 }
 
-#contain-1{
-    display: flex;
-    width: 100%;
-    height: 80%;
-    justify-content: center;
-    align-items: center;
-}
-
-#contain-2{
-    display: flex;
-    width: 100%;
-    height: 20%;
-    color: rgb(202, 202, 202);
-    justify-content: center;
-    align-items: center;
-}
-
-footer #contain-1 ul{
-    list-style: none;
+footer .contain {
+  display: flex;
+  width: 35%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  color: whitesmoke;
 }
