--- a/css/footer.css
+++ b/css/footer.css
@@ -12,4 +12,14 @@ footer .contain {
   justify-content: center;
   align-items: center;
   color: whitesmoke;
+  flex-direction: column;
+}
+
+footer #redes {
+  display: flex;
+  width: 35%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  color: whitesmoke;
 }
