--- a/css/nav.css
+++ b/css/nav.css
@@ -2,7 +2,8 @@ nav {
   display: flex;
   width: 100%;
   height: 50px;
-  background-color: rgb(44, 44, 44);
+  /* background-color: rgb(44, 44, 44); */
+  background-color: black;
   color: white;
 }
 
