--- a/css/we.css
+++ b/css/we.css
@@ -2,7 +2,7 @@ main {
   display: flex;
   width: 100%;
   height: 700px;
-  background-color: rgb(216, 216, 216);
+  background-color: white;
 }
 
 main #contain-1 {
