--- a/css/services.css
+++ b/css/services.css
@@ -24,12 +24,19 @@ article .contain .info-contain {
   transition: transform 0.3s ease;
   padding: 20px;
   flex-direction: column;
+  text-align: center;
 }
 
 article .contain .info-contain:hover {
   transform: translateY(-10px);
 }
 
-article .contain .info-contain .icon-title{
+article .contain .info-contain .icon-title {
   display: flex;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+
+article .contain .info-contain .icon-title h1 {
+  padding-left: 20px;
 }
