--- a/css/we.css
+++ b/css/we.css
@@ -10,12 +10,16 @@ main #contain-1 {
   width: 100%;
   height: 100%;
   flex-direction: column;
-  /* border-bottom: 1px solid black; */
 }
 
-main #contain-1 p {
-  padding: 20px 200px;
-  text-align: justify;
+main #contain-1 .contain-text p {
+  padding: 20px 180px;
+  text-align: center;
+  font-size: 20px;
+}
+
+main #contain-1 .contain-text h1 {
+  font-size: 50px;
 }
 
 main #contain-2 {
@@ -31,4 +35,51 @@ main #contain-2 img {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+main #contain-2::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgb(255, 255, 255), rgba(0, 0, 0, 0));
+  pointer-events: none;
+}
+
+main #contain-1 .contain-text {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 40%;
+  justify-content: center;
+  align-items: center;
+}
+
+main #contain-1 .contain-box {
+  display: flex;
+  width: 100%;
+  height: 60%;
+}
+
+main #contain-1 .contain-box .mini-contain-box {
+  display: flex;
+  flex-direction: column;
+  width: 35%;
+  height: 70%;
+  background-color: #f4f4f5;
+  margin: 20px;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+
+main #contain-1 .contain-box .mini-contain-box h1,
+h2 {
+  padding-bottom: 20px;
+}
+
+main #contain-1 .contain-box .mini-contain-box p {
+  font-size: 18px;
 }
