Se cambio el nombre del index.html a IFM.html

--- a/css/home.css
+++ b/css/home.css
@@ -31,12 +31,15 @@ header .contain-img {
   top: 50%;
   left: 850px;
   transform: translate(-50%, -50%);
+  flex-direction: column;
 }
 
 header .contain-img img {
   width: 60%;
   height: 80%;
   object-fit: cover;
+  opacity: 0;
+  animation: fadeInAnimation 2s forwards;
 }
 
 header .contain video {
@@ -47,4 +50,39 @@ header .contain video {
   height: 100%;
   object-fit: cover;
   transform: translate(-50%, -50%);
+}
+
+header .contain-img .contain-buttons {
+  display: flex;
+}
+
+header .contain-img .contain-buttons a {
+  text-decoration: none;
+  color: white;
+  animation-delay: 1s;
+}
+
+header .contain-img .contain-buttons .buttons {
+  display: flex;
+  background-color: #18181b;
+  border: none;
+  border-radius: 5px;
+  width: 170px;
+  height: 45px;
+  margin: 5px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  animation-delay: 1s;
+}
+
+header .contain-img .contain-buttons .buttons:hover {
+  cursor: pointer;
+  background-color: #222224;
+}
+
+@keyframes fadeInAnimation {
+  to {
+    opacity: 1;
+  }
 }
