--- a/css/innov8/footer.css
+++ b/css/innov8/footer.css
@@ -2,7 +2,7 @@ footer {
   display: flex;
   width: 100%;
   height: 200px;
-  background-color: rgb(29, 29, 29);
+  background-color: #111111;
 }
 
 footer .contain {
@@ -22,4 +22,10 @@ footer #redes {
   justify-content: center;
   align-items: center;
   color: whitesmoke;
+}
+
+footer img {
+  width: 60px;
+  padding: 10px;
+  filter: invert();
 }
