--- a/css/innov8/home.css
+++ b/css/innov8/home.css
@@ -17,7 +17,7 @@ header .static-image {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("tu-imagen.jpg");
+  /* background-image: url("tu-imagen.jpg"); */
   background-size: cover;
   background-attachment: fixed;
   z-index: -1; /* Para que quede detrás del contenido */
