--- a/css/innov8/services.css
+++ b/css/innov8/services.css
@@ -1,23 +1,32 @@
 article {
   display: flex;
   width: 100%;
-  height: 700px;
+  height: 600px;
   background-color: white;
   flex-direction: column;
+}
+
+article .title {
+  display: flex;
+  width: 100%;
+  height: 20%;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 35px;
 }
 
 article .contain {
   display: flex;
   width: 100%;
-  height: 35%;
-  justify-content: space-around;
-  align-items: center;
+  height: 80%;
+  justify-content: space-evenly;
+  padding-top: 40px;
 }
 
 article .contain .info-contain {
   display: flex;
   width: 25%;
-  height: 75%;
+  height: fit-content;
   background-color: white;
   border-radius: 10px;
   box-shadow: 2px 5px 8px 2px #ececec;
