--- a/css/olimpia/contact.css
+++ b/css/olimpia/contact.css
@@ -1,39 +1,58 @@
 .section {
-    display: flex;
-    background-color: #191919;
-    width: 100%;
-    height: 400px;
-    color: white;
-  }
-  
-  .section .content-contact {
-    display: flex;
-    width: 30%;
-    height: 100%;
-    padding-top: 40px;
-    padding-left: 100px;
-    font-size: 24px;
-    flex-direction: column;
-    text-align: start;
-  }
-  
-  .section .content-ubi {
-    display: flex;
-    width: 70%;
-    height: 100%;
-  }
-  
-  .section .content-ubi .content-img {
-    display: flex;
-    width: 35%;
-    height: 100%;
-    padding-top: 40px;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .section .content-ubi .content-img img{
-      width: 70%;
-      height: 50%;
-  }
-  
+  display: flex;
+  background-color: #191919;
+  width: 100%;
+  height: 420px;
+  color: white;
+}
+
+.section .content-contact {
+  display: flex;
+  width: 30%;
+  height: 100%;
+  padding-top: 40px;
+  padding-left: 100px;
+  font-size: 24px;
+  flex-direction: column;
+  text-align: start;
+}
+
+.section .content-ubi {
+  display: flex;
+  width: 70%;
+  height: 100%;
+  flex-direction: column;
+}
+
+.section .content-ubi .ubi {
+  display: flex;
+}
+
+.section .content-ubi .ubi .content-img {
+  display: flex;
+  width: 35%;
+  height: 100%;
+  padding-top: 40px;
+  align-items: center;
+  flex-direction: column;
+}
+
+.section .content-ubi .content-img img {
+  width: 75%;
+  height: 75%;
+  padding-bottom: 20px;
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+}
+
+.section .content-ubi .content-img img:hover {
+  transform: translateY(-10px);
+}
+
+.section .content-ubi .title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  padding-top: 40px;
+}
