--- a/css/olimpia/info.css
+++ b/css/olimpia/info.css
@@ -44,15 +44,15 @@ main #contain-1 .contain-text {
   padding-left: 15%;
 }
 
-main #contain-1 .contain-text p, h1{
+main #contain-1 .contain-text p,
+main #contain-1 .contain-text h1 {
   color: white;
 }
 
-main #contain-1 .contain-text h1{
- font-size: 40px; 
+main #contain-1 .contain-text h1 {
+  font-size: 40px;
 }
 
-main #contain-1 .contain-text p{
+main #contain-1 .contain-text p {
   font-size: 20px;
 }
-
