--- a/css/olimpia/services.css
+++ b/css/olimpia/services.css
@@ -1,30 +1,39 @@
 article {
   display: flex;
   width: 100%;
-  height: 700px;
+  height: 600px;
   background-color: white;
   flex-direction: column;
+}
+
+article .title {
+  display: flex;
+  width: 100%;
+  height: 20%;
+  align-items: center;
+  justify-content: center;
+  font-size: 35px;
 }
 
 article .contain {
   display: flex;
   width: 100%;
-  height: 35%;
-  justify-content: space-around;
-  align-items: center;
+  height: 80%;
+  justify-content: space-evenly;
+  padding-top: 40px;
 }
 
 article .contain .info-contain {
   display: flex;
   width: 25%;
-  height: 75%;
+  height: fit-content;
   background-color: white;
   border-radius: 10px;
   box-shadow: 2px 5px 8px 2px #ececec;
   transition: transform 0.3s ease;
   padding: 20px;
   flex-direction: column;
-  text-align: center;
+  text-align: start;
 }
 
 article .contain .info-contain:hover {
@@ -33,7 +42,6 @@ article .contain .info-contain:hover {
 
 article .contain .info-contain .icon-title {
   display: flex;
-  justify-content: center;
   padding-bottom: 10px;
 }
 
