--- a/css/index/main.css
+++ b/css/index/main.css
@@ -5,6 +5,7 @@ main {
   background-color: black;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 main .image-contain {
@@ -14,6 +15,7 @@ main .image-contain {
   position: relative;
   filter: grayscale();
   opacity: 50%;
+  z-index: 1;
 }
 main .image-contain img {
   width: 100%;
@@ -25,12 +27,81 @@ main .image-contain img {
 main .logo-contain {
   display: flex;
   position: absolute;
-  width: 100%;
+  width: 60%;
   height: 100%;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  z-index: 3;
 }
+
+/* Borrar */
+
+main #position-left {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  justify-content: end;
+  align-items: center;
+  z-index: 2;
+}
+
+main #position-right {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  justify-content: start;
+  align-items: center;
+  z-index: 2;
+}
+
+main #position-left a:hover,
+main #position-right a:hover {
+  color: #255784;
+  background-color: #2196f3;
+  box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+  transition-delay: 0.1s;
+}
+
+#sidePanel {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  background-color: #f1f1f1;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+  transform: translateX(100%);
+  transition: transform 0.5s ease;
+  padding: 20px;
+}
+
+#sidePanel.show {
+  transform: translateX(0);
+}
+
+/* Agregar una animación para suavizar la entrada */
+@keyframes slideIn {
+  from {
+      transform: translateX(100%);
+  }
+  to {
+      transform: translateX(0);
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+.show-animation {
+  display: block;
+  animation: slideIn 0.5s forwards;
+}
+
+/* hasta aqui se borra */
 
 main .logo-contain img {
   width: 50%;
@@ -41,30 +112,9 @@ main .logo-contain .buttoms {
   display: flex;
 }
 
-/* main .logo-contain .buttoms a {
-  text-decoration: none;
-  color: white;
-  animation-delay: 1s;
-  display: flex;
-  background-color: #18181b;
-  border: none;
-  border-radius: 5px;
-  width: 170px;
-  height: 45px;
-  margin: 5px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  animation-delay: 1s;
-}
-
-main .logo-contain .buttoms a:hover {
-  cursor: pointer;
-  background-color: #4b4b4b;
-  transition: 1s;
-} */
-
-main .logo-contain .buttoms a {
+main .logo-contain .buttoms a,
+#position-right a,
+#position-left a {
   position: relative;
   display: inline-block;
   padding: 15px 30px;
