--- a/css/innov8/footer.css
+++ b/css/innov8/footer.css
@@ -1,3 +1,5 @@
+@import url(../index/colors.css);
+
 footer {
   display: flex;
   width: 100%;
@@ -27,5 +29,7 @@ footer #redes {
 footer img {
   width: 60px;
   padding: 10px;
-  filter: invert();
+  filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
+    brightness(94%) contrast(93%);
+  /* filter: invert(); */
 }
