--- a/css/innov8/main.css
+++ b/css/innov8/main.css
@@ -1,3 +1,5 @@
+@import url(../index/colors.css);
+
 main {
   display: flex;
   width: 100%;
@@ -50,6 +52,7 @@ main #contain-1 .contain-text h1 {
 
 main #contain-1 .contain-text h1 {
   font-size: 40px;
+  color: var(--naranja_neon);
 }
 
 main #contain-1 .contain-text p {
