--- a/css/IFM/article.css
+++ b/css/IFM/article.css
@@ -1,9 +1,10 @@
 article {
   display: flex;
   width: 100%;
-  height: 700px;
+  height: 400px;
   background-color: white;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 article .contain {
@@ -16,27 +17,40 @@ article .contain {
 
 article .contain .info-contain {
   display: flex;
-  width: 25%;
-  height: 75%;
+  width: 30%;
+  height: 220px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 2px 5px 8px 2px #ececec;
   transition: transform 0.3s ease;
   padding: 20px;
-  flex-direction: column;
-  text-align: center;
+  text-align: start;
+  align-items: center;
 }
 
 article .contain .info-contain:hover {
   transform: translateY(-10px);
 }
 
-article .contain .info-contain .icon-title {
+article .contain .info-contain .icon {
   display: flex;
   justify-content: center;
-  padding-bottom: 10px;
+  padding-right: 20px;
+  align-items: center;
 }
 
-article .contain .info-contain .icon-title h1 {
-  padding-left: 20px;
+article .contain .info-contain .icon img {
+  width: 100px;
+  height: 160px;
+}
+
+article .contain .info-contain h1 {
+  font-size: 18px;
+  padding-bottom: 10px;
+  font-family: "Inter", sans-serif;
+}
+
+article .contain .info-contain p {
+  font-size: 15px;
+  font-family: "Inter", sans-serif;
 }
