--- a/css/IFM/info.css
+++ b/css/IFM/info.css
@@ -1,3 +1,5 @@
+@import url(../index/colors.css);
+
 main {
   display: flex;
   width: 100%;
@@ -39,8 +41,8 @@ main #contain-1 .contain-text {
   color: white;
   text-align: left;
   z-index: 1;
-  padding-right: 55%;
-  padding-left: 15%;
+  padding-right: 65%;
+  padding-left: 5%;
 }
 
 main #contain-1 .contain-text p,
@@ -50,6 +52,7 @@ main #contain-1 .contain-text h1 {
 
 main #contain-1 .contain-text h1 {
   font-size: 40px;
+  color: var(--dorado);
 }
 
 main #contain-1 .contain-text p {
