--- a/css/IFM/nav.css
+++ b/css/IFM/nav.css
@@ -1,55 +1,89 @@
+@import url(../index/colors.css);
+
 nav {
-  display: flex;
+  position: fixed;
+  top: 0;
   width: 100%;
-  height: 50px;
-  /* background-color: rgb(44, 44, 44); */
-  background-color: black;
+  background-color: rgba(51, 51, 51, 0); /* Transparente */
   color: white;
-}
-
-nav #contain-1 {
+  padding: 10px 0;
   display: flex;
-  width: 25%;
-  height: 100%;
-  padding-left: 40px;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
+  z-index: 1000;
+  transition: background-color 0.3s;
 }
 
-nav #contain-1 #logonormal {
-  width: 40px;
-}
-
-nav #contain-1 #logonombre {
-  width: 60%;
-  padding-left: 10px;
-}
-
-nav #contain-2 {
+.logo {
   display: flex;
-  width: 50%;
-  height: 100%;
-  justify-content: space-around;
 }
 
-nav #contain-2 .botones {
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
+.logo img {
+  height: 40px;
+  margin-left: 20px;
 }
 
-nav #contain-2 .botones a {
+.botones {
   display: flex;
   width: 100%;
   height: 100%;
   justify-content: center;
-  align-items: center;
+}
+
+.botones a {
+  color: white;
   text-decoration: none;
+  padding: 0 20px;
+  transition: color 0.3s;
+}
+
+.botones a:hover {
+  color: var(--dorado); /* Color sin scrolled */
+}
+
+.content {
+  padding-top: 60px; /* Espacio para el nav fijo */
+}
+
+/* .scrolled {
+  background-color: rgba(255, 255, 255, 0.5);
+  color: black;
+} */
+
+/* .scrolled .botones a {
+  color: black;
+} */
+
+.scrolled {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: black;
+}
+
+.scrolled .botones a {
+  display: flex;
   color: white;
 }
 
-nav #contain-2 .botones a:hover {
-  background-color: rgb(182, 182, 182);
-  color: black;
-  transition: 1s;
+.scrolled .botones a:hover {
+  color: var(--dorado); /* Color con scrolled */
+}
+
+/* Back */
+
+.back {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 2;
+  background-color: var(--azul_marino);
+  border-radius: 100%;
+  top: 90%;
+  left: 95%;
+}
+
+.back:hover {
+  background-color: #024283;
 }
