--- a/css/IFM/nav.css
+++ b/css/IFM/nav.css
@@ -4,7 +4,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: rgba(51, 51, 51, 0); /* Transparente */
+  background-color: rgba(51, 51, 51, 0);
   color: white;
   padding: 10px 0;
   display: flex;
@@ -45,15 +45,6 @@ nav {
   padding-top: 60px; /* Espacio para el nav fijo */
 }
 
-/* .scrolled {
-  background-color: rgba(255, 255, 255, 0.5);
-  color: black;
-} */
-
-/* .scrolled .botones a {
-  color: black;
-} */
-
 .scrolled {
   background-color: rgba(0, 0, 0, 0.5);
   color: black;
@@ -70,7 +61,10 @@ nav {
 
 /* Back */
 
-.back {
+.back button {
+  border: none;
+  background: none;
+  cursor: pointer;
   width: 50px;
   height: 50px;
   display: flex;
@@ -84,6 +78,27 @@ nav {
   left: 95%;
 }
 
-.back:hover {
+.back button:hover {
   background-color: #024283;
+  transition: 0.1s;
+}
+
+nav #languageToggle {
+  border: none;
+  background: none;
+  cursor: pointer;
+  width: 100px;
+  height: 50px;
+  display: flex;
+  font-size: 15px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.623);
+  border-radius: 5px;
+}
+
+nav #languageToggle:hover {
+  background-color: #024283;
+  color: white;
+  transition: 0.25s;
 }
