--- a/css/innov8/nav.css
+++ b/css/innov8/nav.css
@@ -66,7 +66,10 @@ nav {
 
 /* Back */
 
-.back {
+.back button {
+  border: none;
+  background: none;
+  cursor: pointer;
   width: 50px;
   height: 50px;
   display: flex;
@@ -80,6 +83,27 @@ nav {
   left: 95%;
 }
 
-.back:hover {
+.back button:hover {
   background-color: #024283;
+  transition: 0.1s;
+}
+
+nav #languageToggle {
+  border: none;
+  background: none;
+  cursor: pointer;
+  width: 100px;
+  height: 50px;
+  display: flex;
+  font-size: 15px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.623);
+  border-radius: 5px;
+}
+
+nav #languageToggle:hover {
+  background-color: #024283;
+  color: white;
+  transition: 0.25s;
 }
