--- a/css/IFM/contact.css
+++ b/css/IFM/contact.css
@@ -75,7 +75,12 @@
   content: url(../../assets/svg/Flag_Colombia.svg);
 }
 
-.section .content-ubi .content-img #eeuu:hover {
+/* .section .content-ubi .content-img #eeuu:hover {
   border-radius: 5px;
   content: url(../../assets/svg/Flag_United_States.svg);
+} */
+
+.section .content-ubi .content-img #eeuu:hover {
+  border-radius: 5px;
+  content: url(../../assets/images/Flag_of_the_United_States.png);
 }
