--- a/css/innov8/article.css
+++ b/css/innov8/article.css
@@ -1,16 +1,16 @@
-.section {
+article {
   display: flex;
-  background-color: #080808ea;
+  background-color: #191919;
   width: 100%;
   height: 420px;
   color: white;
 }
 
-.section h1 {
-  color: var(--azul_marino);
+article h1 {
+  color: var(--azul_electrico);
 }
 
-.section .content-contact {
+article .content-contact {
   display: flex;
   width: 30%;
   height: 100%;
@@ -21,23 +21,23 @@
   text-align: start;
 }
 
-.section .content-contact img {
+article .content-contact img {
   filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
     brightness(94%) contrast(93%);
 }
 
-.section .content-ubi {
+article .content-ubi {
   display: flex;
   width: 70%;
   height: 100%;
   flex-direction: column;
 }
 
-.section .content-ubi .ubi {
+article .content-ubi .ubi {
   display: flex;
 }
 
-.section .content-ubi .ubi .content-img {
+article .content-ubi .ubi .content-img {
   display: flex;
   width: 35%;
   height: 100%;
@@ -46,7 +46,7 @@
   flex-direction: column;
 }
 
-.section .content-ubi .ubi .content-img img {
+article .content-ubi .ubi .content-img img {
   width: 75%;
   height: 75%;
   padding-bottom: 20px;
@@ -54,15 +54,11 @@
   transition: transform 0.3s ease;
 }
 
-.section .content-ubi h2 {
-  color: white;
-}
-
-.section .content-ubi .ubi .content-img img:hover {
+article .content-ubi .ubi .content-img img:hover {
   transform: translateY(-10px);
 }
 
-.section .content-ubi .title {
+article .content-ubi .title {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,17 +66,12 @@
   padding-top: 40px;
 }
 
-.section .content-ubi .content-img #colombia:hover {
+article .content-ubi .content-img #colombia:hover {
   border-radius: 5px;
   content: url(../../assets/svg/Flag_Colombia.svg);
 }
 
-/* .section .content-ubi .content-img #eeuu:hover {
-  border-radius: 5px;
-  content: url(../../assets/svg/Flag_United_States.svg);
-} */
-
-.section .content-ubi .content-img #eeuu:hover {
+article .content-ubi .content-img #eeuu:hover {
   border-radius: 5px;
   content: url(../../assets/images/Flag_of_the_United_States.png);
 }
