--- a/css/olimpia/contact.css
+++ b/css/olimpia/contact.css
@@ -1,13 +1,13 @@
 .section {
   display: flex;
-  background-color: #080808ea;
+  background-color: #191919;
   width: 100%;
   height: 420px;
   color: white;
 }
 
 .section h1 {
-  color: var(--azul_marino);
+  color: var(--amarillo);
 }
 
 .section .content-contact {
@@ -22,8 +22,8 @@
 }
 
 .section .content-contact img {
-  filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
-    brightness(94%) contrast(93%);
+  filter: invert(75%) sepia(83%) saturate(511%) hue-rotate(356deg)
+    brightness(100%) contrast(107%);
 }
 
 .section .content-ubi {
@@ -54,10 +54,6 @@
   transition: transform 0.3s ease;
 }
 
-.section .content-ubi h2 {
-  color: white;
-}
-
 .section .content-ubi .ubi .content-img img:hover {
   transform: translateY(-10px);
 }
@@ -74,11 +70,6 @@
   border-radius: 5px;
   content: url(../../assets/svg/Flag_Colombia.svg);
 }
-
-/* .section .content-ubi .content-img #eeuu:hover {
-  border-radius: 5px;
-  content: url(../../assets/svg/Flag_United_States.svg);
-} */
 
 .section .content-ubi .content-img #eeuu:hover {
   border-radius: 5px;
