--- a/css/olimpia/article.css
+++ b/css/olimpia/article.css
@@ -4,7 +4,7 @@ article {
   display: flex;
   width: 100%;
   height: 600px;
-  background-color: #0c0c0c;
+  background-color: white;
   justify-content: center;
   align-items: center;
   font-size: 40px;
