--- a/css/olimpia/contact.css
+++ b/css/olimpia/contact.css
@@ -73,5 +73,5 @@
 
 .section .content-ubi .content-img #eeuu:hover {
   border-radius: 5px;
-  content: url(../../assets/svg/Flag_United_States.svg);
+  content: url(../../assets/images/Flag_of_the_United_States.png);
 }
