--- a/css/olimpia/info.css
+++ b/css/olimpia/info.css
@@ -16,7 +16,7 @@ main #contain-1 {
   justify-content: center; */
 }
 
-main #contain-1 img {
+main #contain-1 #fondo {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -41,16 +41,14 @@ main #contain-1 .contain-text {
   display: flex;
   width: 50%;
   height: 100%;
-  position: relative;
+  /* position: relative; */
   color: white;
   flex-direction: column;
   /* text-align: left; */
   z-index: 1;
-  /* padding-right: 65%;
-  padding-left: 5%; */
-}
-
-main #contain-1 .contain-text .contain-service {
+  padding-right: 15%;
+  padding-left: 5%;
+  justify-content: center;
 }
 
 main #contain-1 .contain-text p,
@@ -65,4 +63,51 @@ main #contain-1 .contain-text h1 {
 
 main #contain-1 .contain-text p {
   font-size: 20px;
+}
+
+main #contain-1 .contain-service {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  position: relative;
+  color: white;
+  flex-direction: column;
+  z-index: 1;
+  justify-content: space-around;
+}
+
+main #contain-1 .contain-service .button-container {
+  display: flex;
+}
+
+main #contain-1 .contain-service .button-container .content {
+  opacity: 0;
+  transform: translateX(100%);
+  transition: all 0.5 ease-in-out;
+  top: 50%;
+  left: 100%;
+  transform: translate(50%, 0%);
+  z-index: 0;
+  padding-left: 40px;
+}
+
+/* Preguntar diesño */
+
+/* main #contain-1 .contain-service .button-container:hover .content {
+  opacity: 1;
+  transform: translateX(0);
+} */
+
+main #contain-1 .contain-service .button-container:focus-within .content {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+main #contain-1 .contain-service .button-container button {
+  background: none;
+  border: none;
+}
+
+main #contain-1 .contain-service .button-container button:hover {
+  cursor: pointer;
 }
