Diseño de animacion de botones agregado a IFM

--- a/css/olimpia/info.css
+++ b/css/olimpia/info.css
@@ -84,9 +84,9 @@ main #contain-1 .contain-service .button-container .content {
   opacity: 0;
   transform: translateX(100%);
   transition: all 0.5s ease-in-out;
-  top: 50%;
+  /* transform: translate(50%, 0%);
+  top: 50%; */
   left: 100%;
-  transform: translate(50%, 0%);
   z-index: 0;
   padding-left: 40px;
 }
