--- a/css/olimpia/article.css
+++ b/css/olimpia/article.css
@@ -1,4 +1,4 @@
-@import url(../index/colors.css);
+/* @import url(../index/colors.css);
 
 article {
   display: flex;
@@ -25,4 +25,4 @@ article .imagenes img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
