--- a/css/index/1366x768/lenguage.css
+++ b/css/index/1366x768/lenguage.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
+@media only screen and (min-width: 768px) and (max-width: 1400px) {
   .button_language #languageToggle {
     border: none;
     background: none;
@@ -11,10 +11,10 @@
     align-items: center;
     background-color: rgba(255, 255, 255, 0.623);
     border-radius: 5px;
-    position: fixed;
+    position: absolute;
     z-index: 100;
-    top: 20px;
-    left: 94%;
+    right: 2rem;
+    top: 3rem;
   }
 
   .button_language #languageToggle:hover {
