--- a/css/index/1366x768/main.css
+++ b/css/index/1366x768/main.css
@@ -1,8 +1,8 @@
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
+@media only screen and (min-width: 768px) and (max-width: 1400px) {
   main {
     display: flex;
     width: 100%;
-    height: 974px;
+    height: 100%;
     background-color: black;
     justify-content: center;
     align-items: center;
@@ -36,20 +36,19 @@
   main .logo-contain {
     display: flex;
     position: absolute;
-    width: 60%;
+    width: 80%;
     height: 100%;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     z-index: 3;
   }
 
-  /* Borrar */
+  /* Contenedores laterales */
 
   main #position-left {
     display: flex;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 2%;
     justify-content: end;
     align-items: center;
@@ -59,7 +58,7 @@
   main #position-right {
     display: flex;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 80%;
     justify-content: start;
     align-items: center;
@@ -185,7 +184,7 @@
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 20px;
     overflow: hidden;
     transition: 0.2s;
   }
