--- a/css/index/1920x1080/main.css
+++ b/css/index/1920x1080/main.css
@@ -1,8 +1,8 @@
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1401px) {
   main {
     display: flex;
     width: 100%;
-    height: 974px;
+    height: 100%;
     background-color: black;
     justify-content: center;
     align-items: center;
