--- a/css/index/720x1600/general.css
+++ b/css/index/720x1600/general.css
@@ -1,14 +1,20 @@
-p {
-  color: #6e6e77;
+@media only screen and (max-width: 767px) {
+  h1 {
+    color: #1f4e79;
+    font-size: 50px;
+  }
+
+  h2 {
+    color: #1f4e79;
+    font-size: 40px;
+  }
+
+  p {
+    font-size: 32px;
+  }
+
+  * {
+    font-family: sans-serif;
+  }
 }
 
-h1,
-h2,
-h3,
-h4 {
-  color: #09090b;
-}
-
-* {
-  font-family: sans-serif;
-}
