--- a/css/index/720x1600/lenguage.css
+++ b/css/index/720x1600/lenguage.css
@@ -11,10 +11,10 @@
     align-items: center;
     background-color: rgba(255, 255, 255, 0.623);
     border-radius: 5px;
-    position: fixed;
+    position: absolute;
     z-index: 100;
-    top: 20px;
-    left: 94%;
+    right: 2rem;
+    top: 3rem;
   }
 
   .button_language #languageToggle:hover {
