--- a/css/index/720x1600/main.css
+++ b/css/index/720x1600/main.css
@@ -2,7 +2,7 @@
   main {
     display: flex;
     width: 100%;
-    height: 974px;
+    height: 100%;
     background-color: black;
     justify-content: center;
     align-items: center;
@@ -20,11 +20,12 @@
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
     z-index: 1;
+    flex-direction: column;
   }
 
   main .image-contain img {
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     overflow: hidden;
     object-fit: cover;
   }
@@ -36,12 +37,13 @@
   main .logo-contain {
     display: flex;
     position: absolute;
-    width: 60%;
-    height: 100%;
-    justify-content: center;
+    width: 100%;
+    height: 40%;
+    bottom: 45rem;
     align-items: center;
     flex-direction: column;
     z-index: 3;
+    text-align: center;
   }
 
   /* Borrar */
@@ -49,9 +51,8 @@
   main #position-left {
     display: flex;
     position: absolute;
-    top: 50%;
-    left: 2%;
-    justify-content: end;
+    left: 0;
+    top: 60rem;
     align-items: center;
     z-index: 2;
   }
@@ -59,9 +60,8 @@
   main #position-right {
     display: flex;
     position: absolute;
-    top: 50%;
-    left: 80%;
-    justify-content: start;
+    right: 2rem;
+    top: 60rem;
     align-items: center;
     z-index: 2;
   }
