--- a/css/index/1366x768/general.css
+++ b/css/index/1366x768/general.css
@@ -1,14 +1,19 @@
-p {
-  color: #6e6e77;
-}
+@media only screen and (min-width: 768px) and (max-width: 1400px) {
+  h1 {
+    color: #1f4e79;
+    font-size: 34px;
+  }
 
-h1,
-h2,
-h3,
-h4 {
-  color: #09090b;
-}
+  h2 {
+    color: #1f4e79;
+    font-size: 26px;
+  }
 
-* {
-  font-family: sans-serif;
+  p {
+    font-size: 18px;
+  }
+
+  * {
+    font-family: sans-serif;
+  }
 }
