--- a/css/index/1366x768/main.css
+++ b/css/index/1366x768/main.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) and (max-width: 1400px) {
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
   main {
     display: flex;
     width: 100%;
@@ -179,14 +179,15 @@
   main button {
     position: relative;
     display: inline-block;
-    padding: 15px 30px;
+    padding: 15px 10px;
     color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     overflow: hidden;
     transition: 0.2s;
+    text-align: center;
   }
 
   main .logo-contain .buttoms a:hover {
