--- a/css/innov8/1366x768/article.css
+++ b/css/innov8/1366x768/article.css
@@ -40,7 +40,7 @@
 
   article .content-ubi .ubi .content-img {
     display: flex;
-    width: 35%;
+    width: 25%;
     height: 100%;
     padding-top: 40px;
     align-items: center;
@@ -67,13 +67,18 @@
     padding-top: 40px;
   }
 
+  article .content-ubi .content-img #mexico:hover {
+    border-radius: 5px;
+    content: url(../../../assets/images/Flag_of_Mexico.png);
+  }
+
   article .content-ubi .content-img #colombia:hover {
     border-radius: 5px;
-    content: url(../../assets/svg/Flag_Colombia.svg);
+    content: url(../../../assets/svg/Flag_Colombia.svg);
   }
 
   article .content-ubi .content-img #eeuu:hover {
     border-radius: 5px;
-    content: url(../../assets/images/Flag_of_the_United_States.png);
+    content: url(../../../assets/images/Flag_of_the_United_States.png);
   }
 }
