--- a/css/olimpia/1920x1080/contact.css
+++ b/css/olimpia/1920x1080/contact.css
@@ -40,7 +40,7 @@
 
   .section .content-ubi .ubi .content-img {
     display: flex;
-    width: 35%;
+    width: 25%;
     height: 100%;
     padding-top: 40px;
     align-items: center;
@@ -65,6 +65,11 @@
     align-items: center;
     font-size: 24px;
     padding-top: 40px;
+  }
+
+  .section .content-ubi .content-img #mexico:hover {
+    border-radius: 5px;
+    content: url(../../../assets/images/Flag_of_Mexico.png);
   }
 
   .section .content-ubi .content-img #colombia:hover {
