--- a/css/innov8/1366x768/home.css
+++ b/css/innov8/1366x768/home.css
@@ -2,10 +2,11 @@
   header {
     display: flex;
     width: 100%;
-    height: 974px;
+    height: 100vh;
     background-color: rgba(255, 255, 255, 0);
     justify-content: center;
     align-items: center;
+    
   }
 
   header .container {
@@ -21,7 +22,7 @@
     /* background-image: url("tu-imagen.jpg"); */
     background-size: cover;
     background-attachment: fixed;
-    z-index: -1; /* Para que quede detrás del contenido */
+    z-index: -1;
     filter: brightness(70%);
   }
 }
