--- a/css/innov8/1920x1080/main.css
+++ b/css/innov8/1920x1080/main.css
@@ -13,11 +13,11 @@
     height: 100%;
     position: relative;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+  justify-content: center; */
   }
 
-  main #contain-1 img {
+  main #contain-1 #fondo {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -38,12 +38,17 @@
   }
 
   main #contain-1 .contain-text {
-    position: relative;
+    display: flex;
+    width: 50%;
+    height: 100%;
+    /* position: relative; */
     color: white;
-    text-align: left;
+    flex-direction: column;
+    /* text-align: left; */
     z-index: 1;
-    padding-right: 55%;
-    padding-left: 15%;
+    padding-right: 15%;
+    padding-left: 5%;
+    justify-content: center;
   }
 
   main #contain-1 .contain-text p,
@@ -58,5 +63,52 @@
 
   main #contain-1 .contain-text p {
     font-size: 20px;
+  }
+
+  main #contain-1 .contain-service {
+    display: flex;
+    width: 50%;
+    height: 100%;
+    position: relative;
+    color: white;
+    flex-direction: column;
+    z-index: 1;
+    justify-content: space-around;
+  }
+
+  main #contain-1 .contain-service .button-container {
+    display: flex;
+  }
+
+  main #contain-1 .contain-service .button-container .content {
+    opacity: 0;
+    transform: translateX(100%);
+    transition: all 0.5s ease-in-out;
+    /* transform: translate(50%, 0%);
+  top: 50%; */
+    left: 100%;
+    z-index: 0;
+    padding-left: 40px;
+  }
+
+  /* Preguntar diseño */
+
+  /* main #contain-1 .contain-service .button-container:hover .content {
+  opacity: 1;
+  transform: translateX(0);
+} */
+
+  main #contain-1 .contain-service .button-container:focus-within .content {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  main #contain-1 .contain-service .button-container button {
+    background: none;
+    border: none;
+  }
+
+  main #contain-1 .contain-service .button-container button:hover {
+    cursor: pointer;
   }
 }
