--- a/css/innov8/1920x1080/nav.css
+++ b/css/innov8/1920x1080/nav.css
@@ -37,11 +37,7 @@
   .botones a:hover {
     color: var(--azul_electrico); /* Color sin scrolled */
   }
-
-  .content {
-    padding-top: 60px; /* Espacio para el nav fijo */
-  }
-
+  
   .scrolled {
     background-color: rgba(0, 0, 0, 0.5);
     color: black;
@@ -69,14 +65,14 @@
     align-items: center;
     position: fixed;
     z-index: 2;
-    background-color: var(--azul_marino);
+    background-color: var(--azul_electrico);
     border-radius: 100%;
     top: 90%;
     left: 95%;
   }
 
   .back button:hover {
-    background-color: #024283;
+    background-color: #188bff;
     transition: 0.1s;
   }
 
@@ -95,7 +91,7 @@
   }
 
   nav #languageToggle:hover {
-    background-color: #024283;
+    background-color: var(--naranja_neon);
     color: white;
     transition: 0.25s;
   }
