--- a/css/innov8/720x1600/article.css
+++ b/css/innov8/720x1600/article.css
@@ -3,18 +3,28 @@
     display: flex;
     background-color: #191919;
     width: 100%;
-    height: 420px;
+    height: 70rem;
     color: white;
+    flex-direction: column;
   }
 
   article h1 {
     color: var(--azul_electrico);
+    font-size: 25px;
+  }
+
+  article h2 {
+    font-size: 15px;
+  }
+
+  article p {
+    font-size: 15px;
   }
 
   article .content-contact {
     display: flex;
-    width: 30%;
-    height: 100%;
+    width: 100%;
+    height: 20%;
     padding-top: 40px;
     padding-left: 100px;
     font-size: 24px;
@@ -29,13 +39,16 @@
 
   article .content-ubi {
     display: flex;
-    width: 70%;
-    height: 100%;
+    width: 100%;
+    height: 80%;
     flex-direction: column;
   }
 
   article .content-ubi .ubi {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   article .content-ubi .ubi .content-img {
@@ -48,8 +61,8 @@
   }
 
   article .content-ubi .ubi .content-img img {
-    width: 75%;
-    height: 75%;
+    width: 250%;
+    height: 100%;
     padding-bottom: 20px;
     border-radius: 5px;
     transition: transform 0.3s ease;
