--- a/css/innov8/720x1600/footer.css
+++ b/css/innov8/720x1600/footer.css
@@ -6,29 +6,34 @@
     width: 100%;
     height: 200px;
     background-color: #111111;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
   }
 
   footer .contain {
     display: flex;
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     justify-content: center;
     align-items: center;
-    color: whitesmoke;
+    color: rgb(145, 145, 145);
     flex-direction: column;
+    text-align: center;
+    padding: 0px 20px;
   }
 
   footer #redes {
     display: flex;
-    width: 35%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     justify-content: center;
     align-items: center;
     color: whitesmoke;
   }
 
   footer img {
-    width: 60px;
+    width: 50px;
     padding: 10px;
     filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
       brightness(94%) contrast(93%);
