--- a/css/innov8/720x1600/home.css
+++ b/css/innov8/720x1600/home.css
@@ -2,7 +2,7 @@
   header {
     display: flex;
     width: 100%;
-    height: 974px;
+    height: 100vh;
     background-color: rgba(255, 255, 255, 0);
     justify-content: center;
     align-items: center;
@@ -23,5 +23,9 @@
     background-attachment: fixed;
     z-index: -1; /* Para que quede detrás del contenido */
     filter: brightness(70%);
+  }
+
+  header #logo{
+    max-width: 100%;
   }
 }
