--- a/css/IFM/720x1600/home.css
+++ b/css/IFM/720x1600/home.css
@@ -2,10 +2,11 @@
   header {
     display: flex;
     width: 100%;
-    height: 974px;
+    height: 100vh;
     background-color: black;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
 
   header .contain {
@@ -41,6 +42,10 @@
     object-fit: cover;
     opacity: 0;
     animation: fadeInAnimation 2s forwards;
+  }
+
+  header #logo {
+    max-width: 50%;
   }
 
   header .contain video {
