--- a/css/IFM/720x1600/nav.css
+++ b/css/IFM/720x1600/nav.css
@@ -13,6 +13,7 @@
     align-items: center;
     z-index: 1000;
     transition: background-color 0.3s;
+    font-size: 10px;
   }
 
   .logo {
@@ -20,8 +21,8 @@
   }
 
   .logo img {
-    height: 70px;
-    margin-left: 20px;
+    height: 0px;
+    margin-left: 0px;
   }
 
   .botones {
@@ -62,8 +63,8 @@
     border: none;
     background: none;
     cursor: pointer;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,7 +73,7 @@
     background-color: var(--azul_marino);
     border-radius: 100%;
     top: 90%;
-    left: 95%;
+    left: 80%;
   }
 
   .back button:hover {
@@ -84,14 +85,15 @@
     border: none;
     background: none;
     cursor: pointer;
-    width: 100px;
-    height: 50px;
+    width: 40px;
+    height: 25px;
     display: flex;
     font-size: 15px;
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.623);
     border-radius: 5px;
+    font-size: 10px;
   }
 
   nav #languageToggle:hover {
