--- a/css/innov8/720x1600/footer.css
+++ b/css/innov8/720x1600/footer.css
@@ -4,7 +4,7 @@
   footer {
     display: flex;
     width: 100%;
-    height: 200px;
+    height: 12.5rem;
     background-color: #111111;
     flex-direction: column-reverse;
     align-items: center;
