--- a/css/IFM/1366x768/home.css
+++ b/css/IFM/1366x768/home.css
@@ -2,7 +2,7 @@
   header {
     display: flex;
     width: 100%;
-    height: 974px;
+    height: 100vh;
     background-color: black;
     justify-content: center;
     align-items: center;
@@ -30,14 +30,16 @@
     overflow: hidden;
     position: absolute;
     top: 50%;
-    left: 850px;
+    left: 29.5rem;
     transform: translate(-50%, -50%);
     flex-direction: column;
   }
 
   header .contain-img img {
-    width: 60%;
-    height: 80%;
+    /* width: 70%;
+    height: 80%; */
+    width: 50vw;
+    height: 55vh;
     object-fit: cover;
     opacity: 0;
     animation: fadeInAnimation 2s forwards;
