--- a/css/IFM/1366x768/nav.css
+++ b/css/IFM/1366x768/nav.css
@@ -4,14 +4,14 @@
   nav {
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 100vw;
     background-color: rgba(51, 51, 51, 0);
     color: white;
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 1000;
+    z-index: 10;
     transition: background-color 0.3s;
   }
 
