--- a/css/IFM/1920x1080/nav.css
+++ b/css/IFM/1920x1080/nav.css
@@ -28,7 +28,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-    justify-content: center;
+    padding-left: 22rem;
   }
 
   .botones a {
