--- a/css/olimpia/720x1600/contact.css
+++ b/css/olimpia/720x1600/contact.css
@@ -3,7 +3,9 @@
     display: flex;
     background-color: #191919;
     width: 100%;
-    height: 80rem;
+    /* height: 80rem; */
+    height: fit-content;
+    padding-bottom: 2rem;
     color: white;
     flex-direction: column;
   }
