Se optimizaron los archivos, eliminando todos los archivos de responsive innecesarios para añadirlos en un solo archivo modificable CSS

--- a/css/IFM/responsive.css
+++ b/css/IFM/responsive.css
@@ -1,4 +1,4 @@
-@import url(../../index/colors.css);
+@import url(../index/colors.css);
 @import url(article.css);
 @import url(contact.css);
 @import url(footer.css);
