--- a/css/IFM/footer.css
+++ b/css/IFM/footer.css
@@ -1,114 +1,99 @@
 @import url(../index/colors.css);
 
+/* Estilos generales aplicables a todos los tamaños de pantalla */
+footer {
+  display: flex;
+  width: 100%;
+  background-color: #111111;
+}
+
+footer .contain {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+footer #redes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: whitesmoke;
+}
+
+footer img {
+  padding: 10px;
+  filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
+    brightness(94%) contrast(93%);
+}
+
+/* Estilos específicos para pantallas grandes (min-width: 1200px) */
 @media only screen and (min-width: 1200px) {
   footer {
-    display: flex;
-    width: 100%;
     height: 200px;
-    background-color: #111111;
   }
 
   footer .contain {
-    display: flex;
     width: 50%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
     color: rgb(145, 145, 145);
-    flex-direction: column;
   }
 
   footer #redes {
-    display: flex;
     width: 35%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
-    color: whitesmoke;
   }
 
   footer img {
     width: 60px;
-    padding: 10px;
-    filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
-      brightness(94%) contrast(93%);
-    /* filter: invert(); */
   }
 }
 
+/* Estilos específicos para pantallas medianas (min-width: 768px y max-width: 1199px) */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   footer {
-    display: flex;
-    width: 100%;
     height: 200px;
-    background-color: #111111;
   }
 
   footer .contain {
-    display: flex;
     width: 50%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
     color: whitesmoke;
-    flex-direction: column;
   }
 
   footer #redes {
-    display: flex;
     width: 35%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
-    color: whitesmoke;
   }
 
   footer img {
     width: 60px;
-    padding: 10px;
-    filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
-      brightness(94%) contrast(93%);
-    /* filter: invert(); */
   }
 }
 
+/* Estilos específicos para pantallas pequeñas (max-width: 767px) */
 @media only screen and (max-width: 767px) {
   footer {
-    display: flex;
-    width: 100%;
     height: 12.5rem;
-    background-color: #111111;
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
   }
 
   footer .contain {
-    display: flex;
     width: 100%;
     height: 50%;
-    justify-content: center;
-    align-items: center;
     color: rgb(145, 145, 145);
-    flex-direction: column;
     text-align: center;
     padding: 0px 20px;
   }
 
   footer #redes {
-    display: flex;
     width: 100%;
     height: 50%;
-    justify-content: center;
-    align-items: center;
-    color: whitesmoke;
   }
 
   footer img {
     width: 50px;
-    padding: 10px;
-    filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
-      brightness(94%) contrast(93%);
-    /* filter: invert(); */
   }
 }
