--- a/css/IFM/home.css
+++ b/css/IFM/home.css
@@ -1,195 +1,105 @@
+header {
+  display: flex;
+  width: 100%;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
+}
+
+header .contain {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+}
+
+header .contain-img {
+  display: none;
+  width: 80%;
+  height: 80%;
+  margin: 0px 80px;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  flex-direction: column;
+}
+
+header .contain-img img {
+  object-fit: cover;
+  opacity: 0;
+  animation: fadeInAnimation 2s forwards;
+}
+
+header .contain video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes fadeInAnimation {
+  to {
+    opacity: 1;
+  }
+}
+
 @media only screen and (min-width: 1200px) {
   header {
-    display: flex;
-    width: 100%;
     height: 974px;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
-  }
-
-  header .contain {
-    display: flex;
-    width: 50%;
-    height: 100%;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
   }
 
   header .contain-img {
-    display: none;
-    width: 80%;
-    height: 80%;
-    margin: 0px 80px;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: absolute;
-    top: 50%;
     left: 850px;
-    transform: translate(-50%, -50%);
-    flex-direction: column;
   }
 
   header .contain-img img {
     width: 60%;
     height: 80%;
-    object-fit: cover;
-    opacity: 0;
-    animation: fadeInAnimation 2s forwards;
-  }
-
-  header .contain video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: translate(-50%, -50%);
-  }
-
-  @keyframes fadeInAnimation {
-    to {
-      opacity: 1;
-    }
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   header {
-    display: flex;
-    width: 100%;
     height: 100vh;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
-  }
-
-  header .contain {
-    display: flex;
-    width: 50%;
-    height: 100%;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
   }
 
   header .contain-img {
-    display: none;
-    width: 80%;
-    height: 80%;
-    margin: 0px 80px;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: absolute;
-    top: 50%;
     left: 29.5rem;
-    transform: translate(-50%, -50%);
-    flex-direction: column;
   }
 
   header .contain-img img {
-    /* width: 70%;
-    height: 80%; */
     width: 50vw;
     height: 55vh;
-    object-fit: cover;
-    opacity: 0;
-    animation: fadeInAnimation 2s forwards;
-  }
-
-  header .contain video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: translate(-50%, -50%);
-  }
-
-  @keyframes fadeInAnimation {
-    to {
-      opacity: 1;
-    }
   }
 }
 
 @media only screen and (max-width: 767px) {
   header {
-    display: flex;
-    width: 100%;
     height: 100vh;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-  }
-
-  header .contain {
-    display: flex;
-    width: 50%;
-    height: 100%;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
   }
 
   header .contain-img {
-    display: none;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0px 70px;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    top: 50%;
     left: 8rem;
-    transform: translate(-50%, -50%);
-    flex-direction: column;
   }
 
   header .contain-img img {
-    /* width: 60%;
-    height: 80%; */
-    /* max-width: 100%; */
     width: 100%;
     height: 20%;
-    object-fit: cover;
-    opacity: 0;
-    animation: fadeInAnimation 2s forwards;
   }
 
   header #logo {
     max-width: 50%;
-  }
-
-  header .contain video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: translate(-50%, -50%);
-  }
-
-  @keyframes fadeInAnimation {
-    to {
-      opacity: 1;
-    }
   }
 }
