--- a/css/IFM/nav.css
+++ b/css/IFM/nav.css
@@ -1,310 +1,159 @@
 @import url(../index/colors.css);
 
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgba(51, 51, 51, 0);
+  color: white;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
+  transition: background-color 0.3s;
+}
+
+.logo {
+  display: flex;
+}
+
+.logo img {
+  margin-left: 20px;
+}
+
+.botones {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
+
+.botones a {
+  color: white;
+  text-decoration: none;
+  padding: 0 20px;
+  transition: color 0.3s;
+}
+
+.botones a:hover {
+  color: var(--dorado); /* Color sin scrolled */
+}
+
+.scrolled {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: black;
+}
+
+.scrolled .botones a {
+  display: flex;
+  color: white;
+}
+
+.scrolled .botones a:hover {
+  color: var(--dorado); /* Color con scrolled */
+}
+
+/* Back */
+.back button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 2;
+  background-color: var(--azul_marino);
+  border-radius: 100%;
+  transition: background-color 0.1s;
+}
+
+.back button:hover {
+  background-color: #024283;
+}
+
+nav #languageToggle {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.623);
+  border-radius: 5px;
+  transition: background-color 0.25s;
+}
+
+nav #languageToggle:hover {
+  background-color: #024283;
+  color: white;
+}
+
 @media only screen and (min-width: 1200px) {
-  nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: rgba(51, 51, 51, 0);
-    color: white;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1000;
-    transition: background-color 0.3s;
-  }
-
-  .logo {
-    display: flex;
-  }
-
   .logo img {
     height: 70px;
-    margin-left: 20px;
   }
 
   .botones {
-    display: flex;
-    width: 100%;
-    height: 100%;
     padding-left: 22rem;
   }
 
-  .botones a {
-    color: white;
-    text-decoration: none;
-    padding: 0 20px;
-    transition: color 0.3s;
-  }
-
-  .botones a:hover {
-    color: var(--dorado); /* Color sin scrolled */
-  }
-
-  .scrolled {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: black;
-  }
-
-  .scrolled .botones a {
-    display: flex;
-    color: white;
-  }
-
-  .scrolled .botones a:hover {
-    color: var(--dorado); /* Color con scrolled */
-  }
-
-  /* Back */
-
   .back button {
-    border: none;
-    background: none;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 2;
-    background-color: var(--azul_marino);
-    border-radius: 100%;
     top: 90%;
     left: 95%;
   }
 
-  .back button:hover {
-    background-color: #024283;
-    transition: 0.1s;
-  }
-
   nav #languageToggle {
-    border: none;
-    background: none;
-    cursor: pointer;
     width: 100px;
     height: 50px;
-    display: flex;
     font-size: 15px;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.623);
-    border-radius: 5px;
-  }
-
-  nav #languageToggle:hover {
-    background-color: #024283;
-    color: white;
-    transition: 0.25s;
   }
 }
 
-@import url(../index/colors.css);
-
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
-  nav {
-    position: fixed;
-    top: 0;
-    width: 100vw;
-    background-color: rgba(51, 51, 51, 0);
-    color: white;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 10;
-    transition: background-color 0.3s;
-  }
-
-  .logo {
-    display: flex;
-  }
-
   .logo img {
     height: 70px;
-    margin-left: 20px;
   }
 
   .botones {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
+    padding-left: 0;
   }
-
-  .botones a {
-    color: white;
-    text-decoration: none;
-    padding: 0 20px;
-    transition: color 0.3s;
-  }
-
-  .botones a:hover {
-    color: var(--dorado); /* Color sin scrolled */
-  }
-
-  .scrolled {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: black;
-  }
-
-  .scrolled .botones a {
-    display: flex;
-    color: white;
-  }
-
-  .scrolled .botones a:hover {
-    color: var(--dorado); /* Color con scrolled */
-  }
-
-  /* Back */
 
   .back button {
-    border: none;
-    background: none;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 2;
-    background-color: var(--azul_marino);
-    border-radius: 100%;
     top: 90%;
     left: 95%;
   }
 
-  .back button:hover {
-    background-color: #024283;
-    transition: 0.1s;
-  }
-
   nav #languageToggle {
-    border: none;
-    background: none;
-    cursor: pointer;
     width: 100px;
     height: 50px;
-    display: flex;
     font-size: 15px;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.623);
-    border-radius: 5px;
-  }
-
-  nav #languageToggle:hover {
-    background-color: #024283;
-    color: white;
-    transition: 0.25s;
   }
 }
-
-@import url(../index/colors.css);
 
 @media only screen and (max-width: 767px) {
   nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: rgba(51, 51, 51, 0);
-    color: white;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1000;
-    transition: background-color 0.3s;
     font-size: 10px;
   }
 
-  .logo {
-    display: flex;
-  }
-
   .logo img {
-    height: 0px;
-    margin-left: 0px;
+    height: 0;
+    margin-left: 0;
   }
-
-  .botones {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-  }
-
-  .botones a {
-    color: white;
-    text-decoration: none;
-    padding: 0 20px;
-    transition: color 0.3s;
-  }
-
-  .botones a:hover {
-    color: var(--dorado); /* Color sin scrolled */
-  }
-
-  .scrolled {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: black;
-  }
-
-  .scrolled .botones a {
-    display: flex;
-    color: white;
-  }
-
-  .scrolled .botones a:hover {
-    color: var(--dorado); /* Color con scrolled */
-  }
-
-  /* Back */
 
   .back button {
-    border: none;
-    background: none;
-    cursor: pointer;
     width: 40px;
     height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 2;
-    background-color: var(--azul_marino);
-    border-radius: 100%;
     top: 90%;
     left: 80%;
   }
 
-  .back button:hover {
-    background-color: #024283;
-    transition: 0.1s;
-  }
-
   nav #languageToggle {
-    border: none;
-    background: none;
-    cursor: pointer;
     width: 40px;
     height: 25px;
-    display: flex;
-    font-size: 15px;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.623);
-    border-radius: 5px;
     font-size: 10px;
-  }
-
-  nav #languageToggle:hover {
-    background-color: #024283;
-    color: white;
-    transition: 0.25s;
   }
 }
